--- a/style/admin.css
+++ b/style/admin.css
@@ -79,8 +79,9 @@ body {
 }
 
 .topBar {
-  border-bottom: 40px solid #000000;
   margin-bottom: 30px;
+  background-color: #fff;
+  box-shadow: 0 1px 2px  #000000;
 }
 
 .topBar .wrap {
@@ -104,15 +105,14 @@ body {
   }
 }
 
-.topBar a {
-  display: block;
-  text-decoration: none;
-  color: #000000;
-  font-size: 1.25rem;
+.sticky-top{
+  position: sticky;
+  top: 0;
+  z-index: 1020;
 }
 
 .topBar a:hover {
-  color: #6A33F8;
+  color: #9c9c9c;
   -webkit-transform: scale(1.05);
           transform: scale(1.05);
 }
@@ -131,13 +131,22 @@ body {
 }
 
 .topBar-menu a {
-  padding: 36px 24px;
-  background-color: #FFFFFF;
+  padding: 18px 24px;
+  font-weight: normal;
+  display: block;
+  text-decoration: none;
+  color: #000000;
+  font-size: 1rem;
+  display: flex;
+  align-items: center;
 }
 
 .topBar-menu a:hover {
   -webkit-transform: scale(1);
           transform: scale(1);
+}
+.ms-2{
+  margin-right: 8px;
 }
 
 .topBar-menu li:last-child a {
@@ -162,7 +171,7 @@ body {
   }
   .topBar-menu a {
     text-align: center;
-    padding: 15px;
+    padding: 18px;
     font-size: 1rem;
   }
   .topBar-menu a:hover {
@@ -170,7 +179,7 @@ body {
     color: #FFFFFF;
   }
   .topBar-menu li:last-child a {
-    padding: 15px;
+    padding: 18px;
   }
 }
 
@@ -192,8 +201,11 @@ body {
 }
 
 .logo {
-  padding: 36px 0;
+  padding: 18px 0;
   font-size: 1.5rem;
+  display: block;
+  text-decoration: none;
+  color: #000000;
 }
 
 @media (max-width: 767px) {
@@ -201,7 +213,6 @@ body {
     padding: 15px;
   }
 }
-
 .banner {
   position: relative;
   background-image: url("https://i.imgur.com/3ewLAKn.png");
@@ -673,7 +684,8 @@ body {
 }
 
 .discardAllBtn:hover {
-  background-color: #000000;
+  background-color: #2aaeeb;
+  border:1px solid #2aaeeb;
   color: #FFFFFF;
 }
 
@@ -755,8 +767,8 @@ body {
 }
 
 .orderPage-list .discardAllBtn {
-  -ms-flex-item-align: end;
-      align-self: flex-end;
+  -ms-flex-item-align: start;
+      align-self: flex-start;
   margin-bottom: 12px;
 }
 
@@ -768,7 +780,7 @@ body {
 .orderPage-table th, .orderPage-table td {
   padding: 10px;
   text-align: left;
-  border: 1px solid #000000;
+  border: 1px solid #a7a7a7;
 }
 
 @media (max-width: 1110px) {
@@ -793,7 +805,12 @@ body {
 .orderStatus{
   padding: 10px;
   display: block;
-  color: #0067CE;
+  color: #c71818;
+  text-decoration: none;
+}
+.orderStatus_check{
+  color: #448dd1;
+  text-decoration: none;
 }
 
 .orderTableWrap {
